--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,12 @@ plugins {
 
 group = 'com.mbabski'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
 
 configurations {
     compileOnly {
@@ -23,7 +28,7 @@ repositories {
 docker {
     name "${project.name}"
     dockerfile file('docker/Dockerfile')
-    copySpec.from(jar).rename(".*","app.jar")
+    copySpec.from(jar).rename(".*", "app.jar")
     buildArgs(['JAR_FILE': "app.jar"])
 }
 
